syntax = "proto3";

package hdwallet_api;

option go_package = "github.com/crypto-bundle/bc-wallet-tron-hdwallet/pkg/grpc";

enum WalletMakerStrategy {
  PLACEHOLDER_STRATEGY_TYPE = 0;
  SIGNE_MNEMONIC_STRATEGY_TYPE = 1;
  MULTIPLE_MNEMONIC_STRATEGY_TYPE = 2;
}

message DerivationAddressIdentity {
  uint32 AccountIndex = 1;
  uint32 InternalIndex = 2;
  uint32 AddressIndex = 3;

  string Address = 4;
}

message GetEnabledWalletsRequest {
}

message MnemonicWalletIdentity {
  string WalletUUID = 1;
  bool IsHot = 2;
}

message WalletIdentity {
  string WalletUUID = 1;
  string Title = 2;
  string Purpose = 3;
  WalletMakerStrategy Strategy = 4;
  uint32 MnemonicWalletCount = 5;
  repeated MnemonicWalletIdentity MnemonicWalletIdentity = 6;
}

message GetEnabledWalletsResponse {
  repeated WalletIdentity Wallets = 1;
  uint32 WalletsCount = 2;
}

message AddNewWalletRequest {
  string Title = 1;
  string Purpose = 2;
  WalletMakerStrategy Strategy = 3;
}

message AddNewWalletResponse {
  WalletIdentity Wallet = 1;
}

message DerivationAddressRequest {
  DerivationAddressIdentity AddressIdentity = 1;
}

message DerivationAddressResponse {
  DerivationAddressIdentity AddressIdentity = 1;
}

message DerivationAddressByRangeRequest {
  uint32 AccountIndex = 1;
  uint32 InternalIndex = 2;
  uint32 AddressIndexFrom = 3;
  uint32 AddressIndexTo = 4;
}

message DerivationAddressByRangeResponse {
  repeated DerivationAddressIdentity AddressIdentities = 1;
}

service HdWalletApi {
  rpc AddNewWallet                      (AddNewWalletRequest)                returns (AddNewWalletResponse) {}
  rpc GetEnabledWallets                 (GetEnabledWalletsRequest)           returns (GetEnabledWalletsResponse) {}
  rpc GetDerivationAddress              (DerivationAddressRequest)           returns (DerivationAddressResponse) {}
  rpc GetDerivationAddressByRange       (DerivationAddressByRangeRequest)    returns (DerivationAddressByRangeResponse) {}
}